--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,5 @@
 @import '~normalize.css';
 
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
