--- a/src/styles/_utils.export-variables.scss
+++ b/src/styles/_utils.export-variables.scss
@@ -34,7 +34,8 @@
 
   colorGray: $color-gray;
   colorGrayLight: $color-gray-light;
-  colorGray: $color-gray-dark;
+  colorGrayDark: $color-gray-dark;
+  colorGrayDarker: $color-gray-darker;
     // Page
   colorBaseBackground: $color-base-background;
     // Buttons
