--- a/src/styles/_utils.export-variables.scss
+++ b/src/styles/_utils.export-variables.scss
@@ -8,6 +8,7 @@
   fontWeightMedium: $font-weight-medium;
   fontWeightBold: $font-weight-bold;
 
+  border: $border;
   globalRadius: $radius;
   globalTransition: $transition;
 
