Fix names of constants

--- a/src/styles/_utils.export-variables.scss
+++ b/src/styles/_utils.export-variables.scss
@@ -18,9 +18,9 @@
   unitTiny: $unit-tiny;
   unitSmall: $unit-small;
   unitLarge: $unit-large;
-  unitXlarge: $unit-xlarge;
-  unitXxlarge: $unit-xxlarge;
-  unitXxxlarge: $unit-xxxlarge;
+  unitXLarge: $unit-xlarge;
+  unitXxLarge: $unit-xxlarge;
+  unitXxxLarge: $unit-xxxlarge;
   unitHuge: $unit-huge;
 
   colorBrand: $color-brand;
