Add import of button styles

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,7 @@
 @import "./styles/elements.headings";
 @import "./styles/elements.images";
 @import "./styles/elements.links";
+@import "./styles/elements.buttons";
 
 // UTILS
 @import "./styles/utils.export-variables";
